--- a/notebooks/POC1_1st_exploration.ipynb
+++ b/notebooks/POC1_1st_exploration.ipynb
@@ -2477,8 +2477,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "parallel(res_df[1:])         "
+    "res_df.drop(['Total number of tests'], axis=1, inplace=True)\n",
+    "parallel(res_df[1:], label='plm')         "
    ]
   }
  ],
